protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_text_format_message-10.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Message {
        fields: [
            Field {
                name: Ident(
                    Ident {
                        value: "foo",
                        span: 0..3,
                    },
                ),
                value: Scalar(
                    Ident {
                        negative: false,
                        ident: Ident {
                            value: "enum",
                            span: 5..9,
                        },
                        span: 5..9,
                    },
                ),
                span: 0..9,
            },
        ],
    },
)
