protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_text_format_message-15.snap
---
source: protox-parse/src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    "escapes : \"\\x07\\x08\\x0c\\n\\r\\t\\x0b?\\\\\\'\\\"\\x01\\tI\\n\\xaa\\xe1\\x84\\x91\\xf4\\x81\\x84\\x91\"",
)
